[gd_scene load_steps=4 format=3 uid="uid://ctyb6ojuj8ra"]

[ext_resource type="Texture2D" uid="uid://bbsqr3yddh8vw" path="res://Assets/altar/altar.png" id="1_qtrpd"]
[ext_resource type="Script" path="res://Scenes/altar.gd" id="1_altar_script"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5b5ay"]
size = Vector2(80, 60)

[node name="Altar" type="Area2D"]
script = ExtResource("1_altar_script")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32.47577, -3.8737102)
scale = Vector2(0.11009692, 0.10050516)
texture = ExtResource("1_qtrpd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(32.5, -1.5)
shape = SubResource("RectangleShape2D_5b5ay")

[node name="InteractPrompt" type="Label" parent="."]
offset_left = 0.0
offset_top = -40.0
offset_right = 65.0
offset_bottom = -20.0
theme_override_colors/font_color = Color(1, 1, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Press F to Shop"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
